# angular-testing-library

./: .gitignore  .prettierignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  angular.json  nx.json  package.json  tsconfig.json
libs/angular-testing-library/: LICENSE  README.md  jest.config.js  ng-package.json  package.json  tsconfig.lib.json  tslint.json
libs/angular-testing-library/src/: index.ts
libs/angular-testing-library/src/lib/: component_fixture.ts  service_mock.ts
src/: component_fixture.ts  public_api.ts
src/spec/: BUILD  public_api.spec.ts
tools/: BUILD  bazel.rc  defaults.bzl  license-banner.txt
tools/testing/: bootstrap_node_tests.ts
